--- a/my-helm-chart/values.yaml
+++ b/my-helm-chart/values.yaml
@@ -74,7 +74,10 @@ resources: {}
   # requests:
   #   cpu: 100m
   #   memory: 128Mi
-
+configmap:
+enabled: true
+data:
+  API_SERVER: 0.0.0.0:80
 autoscaling:
   enabled: false
   minReplicas: 1
